--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<tr>
+			<thead>Roll number</thead>
+			<thead>Name</thead>
+		</tr>
+		<tr>
+			<tbody></tbody>
+			<tbody></tbody>
+			<tbody></tbody>
+		</tr>
+		<tr>
+			<tbody></tbody>
+			<tbody></tbody>
+			<tbody></tbody>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
