--- a/main.html
+++ b/main.html
@@ -9,20 +9,24 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
+		<thead>
 		<tr>
-			<thead>Roll number</thead>
-			<thead>Name</thead>
+			<th>Roll number</th>
+			<th>Name</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
 		</tr>
 		<tr>
-			<tbody></tbody>
-			<tbody></tbody>
-			<tbody></tbody>
+			<td></td>
+			<tdy></td>
+			<td></td>
 		</tr>
-		<tr>
-			<tbody></tbody>
-			<tbody></tbody>
-			<tbody></tbody>
-		</tr>
+	</tbody>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
